# AutoCoinMarginBot

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  config.example.yaml  docker-compose.live.yml  docker-compose.yml  flowchart.md  main.py  pyproject.toml
alerts/: __init__.py  telegram.py
clients/: __init__.py  bybit.py
config/: __init__.py  settings.py
core/: __init__.py  backtest.py  state.py
docs/: prd.md
strategy/: anchored_vwap.py
tools/: tune_backtest.py
